Fix image size and text overflow

--- a/bonus/assets/css/style.css
+++ b/bonus/assets/css/style.css
@@ -31,3 +31,9 @@ img {
   flex: 1;
   min-width: 0;
 }
+
+.card-body * {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
